--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 FLASK_ENV="development"
-MONGO_URI="mongodb://localhost:32768/transmission_file_manager"
+MONGO_URI="mongodb://localhost:32768/user_manager"
